--- a/part1/index.html
+++ b/part1/index.html
@@ -118,7 +118,7 @@
             <form class="form main_form" action="#">
               <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
               <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-              <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+              <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
               <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
               <p class="form_notice">Ваши данные конфиденциальны</p>
             </form>
@@ -422,7 +422,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -480,7 +480,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -532,7 +532,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit" >Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -591,7 +591,7 @@
                 <form class="form main_form decoration_form" action="#">
                   <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                   <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                  <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                  <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                   <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                   <p class="form_notice">Ваши данные конфиденциальны</p>
                 </form>
@@ -618,14 +618,14 @@
         </div>
         <div class="row">
             <!-- <img src="img/our_works/1.png" class="myimage" alt=""> -->
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a href="img/our_works/big_img/1.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/1.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a href="img/our_works/big_img/2.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/2.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a href="img/our_works/big_img/3.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/3.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a href="img/our_works/big_img/4.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/4.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a href="img/our_works/big_img/5.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/5.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a href="img/our_works/big_img/6.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/6.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a href="img/our_works/big_img/7.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/7.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a href="img/our_works/big_img/8.png"><img class="lupa" src="img/our_works/zoom-in.png" alt=""><img src="img/our_works/8.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a class="works_prim" href="img/our_works/big_img/1.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/1.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a class="works_prim" href="img/our_works/big_img/2.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/2.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a class="works_prim" href="img/our_works/big_img/3.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/3.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a class="works_prim" href="img/our_works/big_img/4.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/4.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a class="works_prim" href="img/our_works/big_img/5.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/5.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a class="works_prim" href="img/our_works/big_img/6.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/6.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a class="works_prim" href="img/our_works/big_img/7.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/7.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a class="works_prim" href="img/our_works/big_img/8.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/8.png" alt=""></a></div>
         </div>
       </div>
     </section>
@@ -735,7 +735,7 @@
             <form class="form main_form" action="#">
               <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
               <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-              <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+              <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
               <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
               <p class="form_notice">Ваши данные конфиденциальны</p>
             </form>
@@ -816,7 +816,7 @@
                     <form class="form" action="#">
                       <h2>Введите ваши данные <br>и нажмите заказать звонок</h2>
                         <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                        <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                        <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                         <button class="text-uppercase btn-block button" name="submit" type="submit">Заказать звонок</button>
                         <p class="form_notice">Перезвоним в течение 10 минут</p>
                     </form>
@@ -834,7 +834,7 @@
                     <form class="form" action="#">
                       <h2>Запишитесь сегодня на <br><span>бесплатный замер</span></h2>
                       <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                      <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                      <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                       <button class="text-uppercase btn-block button" name="submit" type="submit">Вызвать замерщика!</button>
                       <p class="form_notice">Ваши данные конфиденциальны</p>
                     </form>
@@ -915,7 +915,7 @@
                     <form class="form" action="#">
                       <h2>Спасибо за обращение! <br>Оставьте свои данные</h2>
                         <input class="form-control form_input" name="user_name" required type="text" placeholder="Введите ваше имя">
-                        <input class="form-control form_input" name="user_phone" required type="text" placeholder="Введите телефон">
+                        <input class="form-control form_input" name="user_phone" required type="tel" placeholder="Введите телефон">
                         <button class="text-uppercase btn-block button" name="submit" type="submit">Рассчитать стоимость</button>
                         <p class="form_notice">Перезвоним в течение 10 минут</p>
                     </form>
