--- a/part1/index.html
+++ b/part1/index.html
@@ -851,20 +851,20 @@
                  <h2>Калькулятор</h2>
                 <h3>Выберите форму балкона <br>и укажите размеры</h3>
                <div class="balcon_icons">
-                 <a href="#" class="type1">
+                 <a href="#" class="type1 balcon_item">
                    <img src="img/modal_calc/balkon/ba_01.png" alt="Тип1" class="type1_img do_image_more"></a>
-                 <a href="#" class="type2">
+                 <a href="#" class="type2 balcon_item">
                    <img src="img/modal_calc/balkon/ba_02.png" alt="Тип2" class="type2_img"></a>
-                 <a href="#" class="type3">
+                 <a href="#" class="type3 balcon_item">
                    <img src="img/modal_calc/balkon/ba_03.png" alt="Тип3" class="type3_img"></a>
-                 <a href="#" class="type4"> 
+                 <a href="#" class="type4 balcon_item"> 
                    <img src="img/modal_calc/balkon/ba_04.png" alt="Тип4" class="type4_img"></a>
                </div>
                 <div class="big_img text-center">
-                  <img src="img/modal_calc/balkon/type1.png" alt="" id="type1">
-                  <img src="img/modal_calc/balkon/type2.png" alt="" id="type2">
-                  <img src="img/modal_calc/balkon/type3.png" alt="" id="type3">
-                  <img src="img/modal_calc/balkon/type4.png" alt="" id="type4">
+                  <img src="img/modal_calc/balkon/type1.png" alt="" id="type1 balcon_content">
+                  <img src="img/modal_calc/balkon/type2.png" alt="" id="type2 balcon_content">
+                  <img src="img/modal_calc/balkon/type3.png" alt="" id="type3 balcon_content">
+                  <img src="img/modal_calc/balkon/type4.png" alt="" id="type4 balcon_content">
                 </div>
                 <input class="form-control" id="width" type="text" placeholder="Ширина" required>
                 <label for="width">мм</label>
