--- a/part1/index.html
+++ b/part1/index.html
@@ -617,15 +617,15 @@
           <div class="section_header_sub"></div>
         </div>
         <div class="row">
-            <!-- <img src="img/our_works/1.png" class="myimage" alt=""> -->
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a class="works_prim" href="img/our_works/big_img/1.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/1.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a class="works_prim" href="img/our_works/big_img/2.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/2.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a class="works_prim" href="img/our_works/big_img/3.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/3.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a class="works_prim" href="img/our_works/big_img/4.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/4.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a class="works_prim" href="img/our_works/big_img/5.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/5.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a class="works_prim" href="img/our_works/big_img/6.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/6.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a class="works_prim" href="img/our_works/big_img/7.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/7.png" alt=""></a></div>
-          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a class="works_prim" href="img/our_works/big_img/8.png"><img class="lupa works_click" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/8.png" alt=""></a></div>
+            <!-- <img src="img/our_works/big_img/2.png" class="myimage" alt=""> -->
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/1.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.1s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/2.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.2s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/3.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.3s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/4.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.4s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/5.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.5s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/6.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.6s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/7.png" alt=""></a></div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 text-center wow fadeIn" data-wow-delay="0.7s"><a><img class="lupa works_click_lup" src="img/our_works/zoom-in.png" alt=""><img class="works_click" src="img/our_works/8.png" alt=""></a></div>
         </div>
       </div>
     </section>
@@ -851,20 +851,20 @@
                  <h2>Калькулятор</h2>
                 <h3>Выберите форму балкона <br>и укажите размеры</h3>
                <div class="balcon_icons">
-                 <a href="#" class="type1 balcon_item">
+                 <a class="type1 balcon_item">
                    <img src="img/modal_calc/balkon/ba_01.png" alt="Тип1" class="type1_img do_image_more"></a>
-                 <a href="#" class="type2 balcon_item">
+                 <a class="type2 balcon_item">
                    <img src="img/modal_calc/balkon/ba_02.png" alt="Тип2" class="type2_img"></a>
-                 <a href="#" class="type3 balcon_item">
+                 <a class="type3 balcon_item">
                    <img src="img/modal_calc/balkon/ba_03.png" alt="Тип3" class="type3_img"></a>
-                 <a href="#" class="type4 balcon_item"> 
+                 <a class="type4 balcon_item"> 
                    <img src="img/modal_calc/balkon/ba_04.png" alt="Тип4" class="type4_img"></a>
                </div>
                 <div class="big_img text-center">
-                  <img src="img/modal_calc/balkon/type1.png" alt="" id="type1 balcon_content">
-                  <img src="img/modal_calc/balkon/type2.png" alt="" id="type2 balcon_content">
-                  <img src="img/modal_calc/balkon/type3.png" alt="" id="type3 balcon_content">
-                  <img src="img/modal_calc/balkon/type4.png" alt="" id="type4 balcon_content">
+                  <img src="img/modal_calc/balkon/type1.png" alt="" id="type1" class="balcon_content">
+                  <img src="img/modal_calc/balkon/type2.png" alt="" id="type2" class="balcon_content">
+                  <img src="img/modal_calc/balkon/type3.png" alt="" id="type3" class="balcon_content">
+                  <img src="img/modal_calc/balkon/type4.png" alt="" id="type4" class="balcon_content">
                 </div>
                 <input class="form-control" id="width" type="text" placeholder="Ширина" required>
                 <label for="width">мм</label>
